--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   box-sizing: border-box;
   outline: none;
   -webkit-tap-highlight-color: transparent;
-  cursor: none;
   user-select: none;
   -webkit-user-drag: none;
   font-family: Georgia;
@@ -34,26 +33,45 @@ body {
   left: var(--x);
   pointer-events: none;
 }
+
+/* This class defines the style of the cursor element */
 .cursor {
+  /* The width and height of the cursor are defined by a CSS variable */
   width: var(--size);
   height: var(--size);
+  /* The border-radius property makes the cursor circular */
   border-radius: 50%;
+  /* The background color of the cursor is white */
   background: white;
+  /* The cursor is positioned absolutely */
   position: absolute;
+  /* The z-index property ensures that the cursor is on top of other elements */
   z-index: 999;
+  /* The pointer-events property is set to none so that the cursor does not interfere with mouse events */
   pointer-events: none;
+  /* The mix-blend-mode property sets the blending mode for the cursor */
   mix-blend-mode: difference;
 }
+
+/* This class defines the style of the cursor's inner circle */
 .cursor-f {
+  /* The width and height of the cursor's inner circle are defined by a CSS variable */
   width: var(--size);
   height: var(--size);
+  /* The cursor's inner circle is positioned absolutely */
   position: absolute;
+  /* The top and left properties are set to 0 to position the inner circle at the top left corner of the cursor */
   top: 0;
   left: 0;
+  /* The background-image property sets the image for the cursor's inner circle */
   background-image: url("data:image/svg+xml,%3Csvg width='47' height='47' viewBox='0 0 47 47' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M42.4202 42.4202C38.8403 46 33.3594 46 23.5 46C13.6406 46 8.15966 46 4.57983 42.4202C1 38.8403 1 33.3594 1 23.5C1 13.6406 1 8.15966 4.57983 4.57983C8.15966 1 13.6406 1 23.5 1C33.3594 1 38.8403 1 42.4202 4.57983C46 8.15966 46 13.6406 46 23.5C46 33.3594 46 38.8403 42.4202 42.4202Z' stroke='white'/%3E%3C/svg%3E%0A");
+  /* The background-size property sets the size of the background image */
   background-size: cover;
+  /* The mix-blend-mode property sets the blending mode for the cursor's inner circle */
   mix-blend-mode: difference;
+  /* The pointer-events property is set to none so that the cursor's inner circle does not interfere with mouse events */
   pointer-events: none;
+  /* The opacity property sets the opacity of the cursor's inner circle */
   opacity: 0.5;
 }
 .buttons {
